5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1670_1391.log
== TEST (2019-04-16 18:14:01) 
-- CODE:
vr1=float(input("Digite o consumo energetico:"))
tfr1=0.60*vl1+5
trf2=0.75*vrl+16

if(vr1>=150):
	print(round(tfr1,2)
else:
	print(round(trf2,2))
	
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:14:22) 
-- CODE:
vr1=float(input("Digite o consumo energetico:"))
tfr1=0.60*vl1+5
trf2=0.75*vrl+16

if(vr1>=150):
	print(round(tfr1,2)
if:
	print(round(trf2,2))
	
-- EXECUTION TIME:
0.129004
-- ERROR:
  File "/home/codebench/codes/1670/1391/main.py", line 7
    if:
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:14:24) 
-- CODE:
vr1=float(input("Digite o consumo energetico:"))
tfr1=0.60*vl1+5
trf2=0.75*vrl+16

if(vr1>=150):
	print(round(tfr1,2)
if:
	print(round(trf2,2))
	
-- ERROR:
File "XXXX", line 7
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:15:36) 
-- CODE:
vr1=float(input("Digite o consumo energetico:"))
tfr1=0.60*vl1+5
trf2=0.75*vrl+16

if(vr1<=150):
	print(round(tfr1,2)
else:
	print(round(trf2,2))
	
-- EXECUTION TIME:
0.146006
-- ERROR:
  File "/home/codebench/codes/1670/1391/main.py", line 7
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:15:37) 
-- CODE:
vr1=float(input("Digite o consumo energetico:"))
tfr1=0.60*vl1+5
trf2=0.75*vrl+16

if(vr1<=150):
	print(round(tfr1,2)
else:
	print(round(trf2,2))
	
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:17:24) 
-- CODE:
vr1=float(input("Digite o consumo energetico:"))
tfr1=0.60*vl1+5
trf2=0.75*vrl+16

if(vr1<=150):
	print(round(tfr1,2)
else:
	print(round(trf2,2))
	
-- EXECUTION TIME:
0.11783
-- ERROR:
  File "/home/codebench/codes/1670/1391/main.py", line 7
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:41:32) 
-- CODE:
vr1=float(input("Digite o consumo energetico(kwh):"))
custo1=0.60*vr1+5
custo2=0.75*vr1+16
if(vr1>=150):
	print(round(custo1,2))
else:
	print(round(custo2<2))
	
-- EXECUTION TIME:
0.144756
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
0
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
155.0
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
305.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:41:34) 
-- CODE:
vr1=float(input("Digite o consumo energetico(kwh):"))
custo1=0.60*vr1+5
custo2=0.75*vr1+16
if(vr1>=150):
	print(round(custo1,2))
else:
	print(round(custo2<2))
	
-- EXECUTION TIME:
0.180404
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
0
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
155.0
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
305.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:36) 
-- CODE:
vr1=float(input("Digite o consumo energetico(kwh):"))
custo1=0.60*vr1+5
custo2=0.75*vr1+16
if(vr1>=150):
	print(round(custo1,2))
else:
	print(round(custo2<2))
	
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:44:48) 
-- CODE:
vr1=float(input("Digite o consumo energetico(kwh):"))
custo1=(0.60*vr1)+5+vr1
custo2=(0.75*vr1)+16+vl1
if(vr1>=150):
	print(round(custo1,2))
else:
	print(round(custo2<2))
	
-- EXECUTION TIME:
0.163832
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/1391/main.py", line 3, in <module>
    custo2=(0.75*vr1)+16+vl1
NameError: name 'vl1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:44:50) 
-- CODE:
vr1=float(input("Digite o consumo energetico(kwh):"))
custo1=(0.60*vr1)+5+vr1
custo2=(0.75*vr1)+16+vl1
if(vr1>=150):
	print(round(custo1,2))
else:
	print(round(custo2<2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    custo2=(0.75*vr1)+16+vl1
NameError: name 'vl1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:17) 
-- CODE:
vr1=float(input("Digite o consumo energetico(kwh):"))
custo1=(0.60*vr1)+5+"vr1"
custo2=(0.75*vr1)+16+"vl1"
if(vr1>=150):
	print(round(custo1,2))
else:
	print(round(custo2<2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    custo1=(0.60*vr1)+5+"vr1"
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:41) 
-- CODE:
vr1=float(input("Digite o consumo energetico(kwh):"))
custo1=(0.60*vr1)+(5+"vr1")
custo2=(0.75*vr1)+(16+"vl1")
if(vr1>=150):
	print(round(custo1,2))
else:
	print(round(custo2<2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    custo1=(0.60*vr1)+(5+"vr1")
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:48:45) 
-- CODE:
vr1=float(input("Digite o consumo energetico(kwh):"))
custo_t1=(0.60*vr1)+5
custo_t2=(0.75*vr1)+16
if(vr1>=150):
	print(round(custo1,2))
else:
	print(round(custo2,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(custo2,2))
NameError: name 'custo2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:04) 
-- CODE:
vr1=float(input("Digite o consumo energetico(kwh):"))
custot1=(0.60*vr1)+5
custo2=(0.75*vr1)+16
if(vr1>=150):
	print(round(custo1,2))
else:
	print(round(custo2,2))
	
-- OUTPUT:
122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:20) 
-- CODE:
vr1=float(input("Digite o consumo energetico(kwh):"))
custo1=(0.60*vr1)+5
custo2=(0.75*vr1)+16
if(vr1>=150):
	print(round(custo1,2))
else:
	print(round(custo2,2))
	
-- OUTPUT:
122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:50:20) 
-- CODE:
vr1=float(input("Digite o consumo energetico(kwh):"))
custo1=(0.60*vr1)
custo2=(0.75*vr1)
if(vr1>=150):
	print(round(custo1,2))
else:
	print(round(custo2,2))
	
-- OUTPUT:
106.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:51:14) 
-- CODE:
vr1=float(input("Digite o consumo energetico(kwh):"))
custo1=(0.60*vr1)+5
custo2=(0.75*vr1)+16
if(vr1<=150):
	print(round(custo1,2))
else:
	print(round(custo2,2))
	
-- OUTPUT:
90.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:51:25) 
-- CODE:
vr1=float(input("Digite o consumo energetico(kwh):"))
custo1=(0.60*vr1)+5
custo2=(0.75*vr1)+16
if(vr1<=150):
	print(round(custo1,2))
else:
	print(round(custo2,2))
	
-- EXECUTION TIME:
0.177405
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
90.2
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
203.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
391.75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
